<resources>
    <string name="app_name">Android Todo List</string>
    <string name="btn_add_task">button add task</string>
    <string name="srt_text_low">Низкий</string>
    <string name="srt_text_middle">Средний</string>
    <string name="srt_text_high">Высокий</string>
    <string name="str_create_task">Создание задачи</string>
    <string name="str_title_task">Название задачи</string>
    <string name="srt_create_task">Создать задачу</string>
    <string name="str_description_task">Описание задачи</string>
</resources>