<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/textViewTitleAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_create_task"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleAddTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextTitleAddTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_title_task"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextDescriptionTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_description_task"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <RadioGroup
            android:id="@+id/radioGroupAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srt_text_low"
                android:textColor="@color/white"
                android:buttonTint="@color/teal_200"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srt_text_middle"
                android:textColor="@color/white"
                android:buttonTint="#FFE500"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srt_text_high"
                android:textColor="@color/white"
                android:buttonTint="#FF0000"/>


        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/srt_create_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>